# olmpress

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  qwen_mixed_with_degradation.json
examples/hf/huggingfacetb-smollm2-135m-instruct/: mb_int4.yaml
examples/hf/microsoft-resnet-50/: README.md  compare.py  eval.py  eval_data_script.py  finetune.py  finetune_script.py  justfile  workflow.yaml
examples/microsoft--resnet-50/: README.md  eval_accuracy.py
examples/microsoft--resnet-50/hf/: workflow.yaml
examples/microsoft--resnet-50/pytorch/: load_model.py  workflow.yaml
examples/resnet50_pruning/: README.md  eval_accuracy.py  prune_resnet50.py  resnet50_model.py  run_sweep.py  run_sweep.sh  sweep_config.yaml  workflow.yaml  workflow_template.yaml
examples/smollm2-135m-instruct/: mb_int4.yaml
examples/torch/torchvision-resnet-50/: README.md  compare.py  eval.py  eval_data_script.py  finetune.py  finetune_script.py  justfile  load_model.py  workflow.yaml
src/chisel/: __init__.py  _olive_patches.py  cli.py
src/chisel/evaluators/: __init__.py
src/chisel/evaluators/quantization/: __init__.py  _mapping.py  evaluator.py
src/chisel/passes/: __init__.py
src/chisel/passes/pytorch/: finetune.py
src/chisel/passes/pytorch/structured_pruning/: __init__.py  base.py  utils.py
src/olmpress/: __init__.py  _olive_patches.py  mapping.py
src/olmpress/evaluators/: __init__.py  degradation.py  topk_accuracy.py
src/olmpress/evaluators/quantization/: __init__.py  _activations.py  _activations_onnx.py  _metrics.py  evaluator.py
src/olmpress/metrics/: __init__.py  cosine.py  kl.py  mse.py  sqnr.py
src/olmpress/passes/: __init__.py  structured_pruning.py
src/olmpress/passes/pytorch/: __init__.py
src/olmpress/passes/pytorch/sparsification/: __init__.py  structured_pruning.py
src/olmpress/passes/pytorch/structured_pruning/: __init__.py  base.py  pruning_pass.py  utils.py
tests/: test_activations.py  test_activations_onnx.py  test_cli.py  test_degradation.py  test_degradation_json.py  test_finetune.py  test_integration_smollm.py  test_main.py  test_mapping.py  test_metrics.py  test_olive_patches.py  test_smoke.py  test_structured_pruning.py
workflows/resnet50-pruning/: sweep_results.csv  sweep_results_global.csv
