[project]
name = "olmpress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "sourqe", email = "sourqee@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "olive-ai>=0.9",
    "torch>=2.4",
    "transformers>=4.45",
    "numpy>=2.0",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    # olive-ai 0.12.1 imports `requests` unconditionally without declaring it.
    "requests>=2.31",
]

[project.scripts]
olmpress = "olmpress:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pyrefly>=0.16",
    "prek>=0.4.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with the formatter
    "D203",    # incompatible with D211 (no-blank-line-before-class) — we use D211
    "D213",    # incompatible with D212 (multi-line-summary-first-line) — we use D212
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D100", "D101", "D102", "D103", "D104", "D107", "ANN001", "ANN201", "ANN202", "ANN204", "INP001", "PLR2004"]

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.13.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
