[project]
name = "olmpress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "icnatspell", email = "spellicnat@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "olive-ai>=0.9",
    "torch>=2.10",
    "transformers>=4.45",
    "numpy>=2.0",
    "onnx>=1.17",
    # olive-ai 0.12.1 imports `requests` unconditionally without declaring it.
    "requests>=2.31",
    "lm-eval>=0.4.12",
    "onnxruntime-gpu>=1.26.0",
    "onnxruntime-genai-cuda>=0.13.2",
    "torch-pruning>=1.6.1",
    "torchvision>=0.26.0",
    "evaluate>=0.4.6",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.scripts]
olmpress = "olmpress:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pyrefly>=0.16",
    "prek>=0.4.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # conflicts with the formatter
    "D203",   # incompatible with D211 (no-blank-line-before-class)
    "D213",   # incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
    "INP001",
    "T201",
    "D103",
    "D100",
    "ANN001",
    "ANN201",
    "ANN202",
]
"tests/**" = [
    "S101",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "INP001",
    "PLR2004",
]

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.13.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that download models and require network access (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
