[project]
name = "chisel"
version = "0.1.0"
description = "Model compression toolkit for PyTorch and Hugging Face Transformers, built on Microsoft Olive."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "icnatspell", email = "spellicnat@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "machine-learning",
    "model-compression",
    "pruning",
    "quantization",
    "knowledge-distillation",
    "pytorch",
    "transformers",
    "onnx",
    "olive",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "olive-ai>=0.12",
    "torch>=2.10",
    "transformers>=4.45",
    "numpy>=2.0",
    "onnx>=1.17",
    # olive-ai 0.12.1 imports `requests` unconditionally without declaring it.
    "requests>=2.31",
    "lm-eval>=0.4.12",
    "onnxruntime-gpu>=1.26.0",
    "onnxruntime-genai-cuda>=0.13.2",
    "torch-pruning>=1.6.1",
    "torchvision>=0.26.0",
    "evaluate>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/icnatspell/chisel"
Repository = "https://github.com/icnatspell/chisel"
Issues = "https://github.com/icnatspell/chisel/issues"
Changelog = "https://github.com/icnatspell/chisel/blob/main/CHANGELOG.md"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.scripts]
chisel = "chisel.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
lint = ["ruff>=0.8"]
typecheck = ["pyrefly>=0.16"]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "prek>=0.4.1",
]
dev = [
    { include-group = "lint" },
    { include-group = "typecheck" },
    { include-group = "test" },
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with the formatter
    "D203",    # incompatible with D211 (no-blank-line-before-class)
    "D213",    # incompatible with D212 (multi-line-summary-first-line)
    "PLC0415", # imports not at top — used for legitimate lazy/deferred imports throughout
    "ANN401",  # Any type — necessary at Olive API boundaries where parent signatures use Any
    "ARG001",  # unused method argument — overriding Olive/PyTorch base class signatures
    "ARG002",  # unused function argument — overriding Olive/PyTorch base class signatures
    "ARG003",  # unused class method argument — overriding Olive/PyTorch base class signatures
    "PLR2004", # magic value comparison — small constants (2, 5) are locally obvious
    "SLF001",  # private member access — intentional access of PyTorch/torch-pruning internals
]

[tool.ruff.lint.per-file-ignores]
"src/chisel/cli.py" = ["T201"]  # CLI uses print() as output mechanism
"examples/**" = ["INP001", "T201", "D103", "D100", "ANN001", "ANN201", "ANN202"]
"tests/**" = [
    "S101",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "INP001",
    "E731",
]

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.11.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that download models and require network access (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
